// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render button component with disabled 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignSelf": "flex-start",
      "backgroundColor": "#242424",
      "borderRadius": 4,
      "flexDirection": "row",
      "gap": 10,
      "justifyContent": "center",
      "opacity": 0.7,
      "paddingHorizontal": 29,
      "paddingVertical": 15,
    }
  }
>
  <Text
    style={
      [
        {
          "fontFamily": "NunitoSans-SemiBold",
          "fontWeight": "600",
          "textAlign": "center",
        },
        {
          "color": "#FFFFFF",
        },
        {
          "fontSize": 18,
          "lineHeight": 24,
        },
      ]
    }
  >
    Click me
  </Text>
</View>
`;

exports[`Button should render button component with isLoading is true 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignSelf": "flex-start",
      "backgroundColor": "#242424",
      "borderRadius": 4,
      "flexDirection": "row",
      "gap": 10,
      "justifyContent": "center",
      "opacity": 0.7,
      "paddingHorizontal": 29,
      "paddingVertical": 15,
    }
  }
>
  <Text
    style={
      [
        {
          "fontFamily": "NunitoSans-SemiBold",
          "fontWeight": "600",
          "textAlign": "center",
        },
        {
          "color": "#FFFFFF",
        },
        {
          "fontSize": 18,
          "lineHeight": 24,
        },
      ]
    }
  >
    Click me
  </Text>
  <ActivityIndicator
    color="#FFFFFF"
    size="small"
  />
</View>
`;

exports[`Button should render properly 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignSelf": "flex-start",
      "backgroundColor": "#242424",
      "borderRadius": 4,
      "flexDirection": "row",
      "gap": 10,
      "justifyContent": "center",
      "opacity": 1,
      "paddingHorizontal": 29,
      "paddingVertical": 15,
    }
  }
>
  <Text
    style={
      [
        {
          "fontFamily": "NunitoSans-SemiBold",
          "fontWeight": "600",
          "textAlign": "center",
        },
        {
          "color": "#FFFFFF",
        },
        {
          "fontSize": 18,
          "lineHeight": 24,
        },
      ]
    }
  >
    Click me
  </Text>
</View>
`;
